--- a/journal/201905.md
+++ b/journal/201905.md
@@ -50,7 +50,7 @@ dcrlnd has been added to the [Bug Bounty Program](https://bounty.decred.org/) on
 
 [dcrandroid](https://github.com/decred/dcrandroid): dcrandroid saw minor bug fixes and UI optimizations, as well as a newly added send & estimation [function](https://github.com/decred/dcrandroid/pull/371). Code has been updated to be compatible with the current [dcrlibwallet](https://github.com/decred/dcrandroid/pull/356) code.
 
-[dcrios](https://github.com/raedahgroup/dcrios): development efforts ramped up in preparation for the official Apple Store launch. Bugs reported by users of the test app have been fixed, UI improvements have been made, and a large [refactoring](https://github.com/raedahgroup/dcrios/pull/391) was performed to remove bloat and improve test coverage. 
+[dcrios](https://github.com/raedahgroup/dcrios): development efforts ramped up in preparation for official launch. Bugs reported by users of the test app have been fixed, UI improvements have been made, and a large [refactoring](https://github.com/raedahgroup/dcrios/pull/391) was performed to remove bloat and improve test coverage. Apple Store release is imminent!
 
 [dcrdata](https://github.com/decred/dcrdata): A markets [dashboard](https://alpha.dcrdata.org/market) has been added to the alpha site with most relevant market information, such as: USD and BTC price and volume from top Decred markets, indexes of BTC/USD price, charts of order book depth, volume and market history.
 
