--- a/journal/201905.md
+++ b/journal/201905.md
@@ -144,28 +144,29 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 [Cryptwerk.com](https://cryptwerk.com/) directory collected a [list of businesses](https://www.reddit.com/r/decred/comments/bp035s/decred_accepted_here_the_list_of_businesses_where/) accepting DCR.
 
 ## Outreach
-Decred was busy in May laying the groundwork for a more decentralized operational rollout. Much of the work in May was focused in and around NYC Blockchain Week, where approximately fifteen community members got together with an extended group of exchanges, miners, institutional partners, and more. An Africa Telegram group (Decred Africa) was launched and coordinated a presentation at Blockchain Nigeria is Lagos on May 24th. In NYC, various community members attended the Magical Crypto Conference on May 10-11, then Consensus the following three days. At Consensus, Jake presented a 30 minute update on Decred's funding and roadmap at their Changelogs track. Additionally, Jake spoke later that day at Ditto PR & The Block's first ever conference, AtomicSwap. Jake was on a panel with Beam, DASH and Orbs, and debated decentralization and governance with the other representatives. Decred coordinated a dinner with members of its Asian community and determined a strategy to penetrate the Asian market, prioritizing China in the immediate term. Dominic and Hugo are planning an event in partnership with Blockbeats, a major crypto media player, to promote and host a meetup in Beijing in the near future.
 
-Anshawblack traveled to New York for NYC Blockchain week and recorded podcasts with JZ, Murad Madhudov, Joel Monegro, Luke Powell, Jamie Holdstock, and Permabull Nino. The first podcast with JZ will release June 1st, with others to follow.
+Decred was busy in May laying the groundwork for a more decentralized operational rollout. Much of the work in May was focused in and around NYC Blockchain Week, where approximately fifteen community members got together with an extended group of exchanges, miners, institutional partners, and more. [Decred Africa](https://t.me/DecredAfrica) Telegram group was launched and coordinated a presentation at Blockchain Nigeria is Lagos on May 24. In NYC, various community members attended the Magical Crypto Conference on May 10-11, then Consensus the following three days. At Consensus, @jy-p presented a 30 minute update on Decred's funding and roadmap at their Changelogs track. Additionally, @jy-p spoke later that day at Ditto PR & The Block's first ever conference, Atomic Swap. @jy-p was on a panel with Beam, Dash and Orbs, and debated decentralization and governance with the other representatives. Decred coordinated a dinner with members of its Asian community and determined a strategy to penetrate the Asian market, prioritizing China in the immediate term. @Dominic and @changhugo are planning an event to promote and host a meetup in Beijing in the near future.
 
-Dustin released the first part of the Decred Assembly, a segment titled 'Decred Distributed' that looks at markets across the world and talks with local community organizers to understand what Decred is doing in those areas. The first [edition](https://www.youtube.com/watch?v=N7GYD8zwOe8) featured Elian Huesca, who is leading efforts in Mexico and doing a lot of great work in Latin America.  In early June, multiple additional segments will be released, including an in-depth discussion with jy-p about the DEX proposal.
+@anshawblack traveled to New York for NYC Blockchain week and recorded podcasts with @jz, @MustStopMurad, Joel Monegro, @lukebp, @jholdstock, and Permabull Nino. The first podcast with @jz was [released](https://www.youtube.com/watch?v=rcEJuN7zh2M), with others to follow.
+
+@Dustorf released the first part of the Decred Assembly, a segment titled Decred Distributed that looks at markets across the world and talks with local community organizers to understand what Decred is doing in those areas. The first [edition](https://www.youtube.com/watch?v=N7GYD8zwOe8) featured @elian, who is leading efforts in Mexico and doing a lot of great work in Latin America. In early June, multiple additional segments will be released, including an in-depth discussion with @jy-p about the DEX proposal.
 
 Ditto's May achievements:
 
-- Ditto and The Block hosted Atomic Swap, an invite-only event during Blockchain Week NYC attended by 150 crypto influencers, media, investors, and enthusiasts, and sponsored by Decred. The Block published a [story](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) prior to the event.
-- @jy-p spoke on “The Idealist’s Dilemma” panel at Atomic Swap, where he debated what it means to be a decentralized protocol alongside Beam, Dash, and Orbs.
-- Reporters from top-tier media such as Bloomberg, The Block, Bitcoin Mag, Fortune and other outlets attended Atomic Swap. Team Ditto was also able to meet several Decred community members in person there, including @akinsawyerr, @anshawblack, @jholdstock, @lukebp, @jy-p, @jz, @dustorf.
-- @liz_bagot and @treydpr from Ditto answered the community’s questions on a reddit [AMA](https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/) and livestreamed video on [YouTube](https://www.youtube.com/watch?v=i8XjAOMX-VM) 
-- @jy-p and @muststopmurad met with reporters from BTC Manager, The Information, and Bitcoin Magazine during Blockchain Week NYC.
-- @jy-p quoted about Facebook getting into crypto in: [Crowdfund Insider](https://www.crowdfundinsider.com), [Live Bitcoin News](https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/), and [The Daily Hodl](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/)
-- @moo31337 [spoke](https://soundcloud.com/matthew-aaron-690749808/horizen-decred-casino-coin-101) with host Matthew Aaron on the Crypto101 podcast. Starts at 17:32.
-- @MustStopMurad [appeared](https://cheddar.com/media/after-40-million-hack-bitcoin-climbs-to-6-000-for-the-first-time-this-year) on Cheddar TV, where he mentions Decred at 2:07.
-- [Mention](https://btcmanager.com/blockchains-neglect-social-contracts-will-likely-fail/) of Decred in BTCManager from after Blockchain week meeting.
-- The Information quoted @jy-p in a story about the launch of Spedn: <https://www.theinformation.com/articles/can-crypto-crack-the-retail-market>
-- @MustStopMurad was [quoted](https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/#25e10e9e5110) in Forbes and mentions Decred: “While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero.” 
-- Secured a speaking slot for @jy-p about decentralization and Decred’s funding mechanism at the Voice of Blockchain, an event that will take place in Chicago this fall.
-- Worked with the community to finalize a byline on Decred’s approach to staking.
-- Submitted PR proposal in Politeia for next six months.
+* Ditto and The Block hosted Atomic Swap, an invite-only event during Blockchain Week NYC attended by 150 crypto influencers, media, investors, and enthusiasts, and sponsored by Decred. The Block published a [story](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) prior to the event.
+* @jy-p spoke on "The Idealist's Dilemma" panel at Atomic Swap, where he debated what it means to be a decentralized protocol alongside Beam, Dash, and Orbs.
+* Reporters from top-tier media such as Bloomberg, The Block, Bitcoin Magazine, Fortune and other outlets attended Atomic Swap. Team Ditto was also able to meet several Decred community members in person there, including @akinsawyerr, @anshawblack, @jholdstock, @lukebp, @jy-p, @jz, @Dustorf.
+* @liz\_bagot and @treydpr from Ditto answered the community's questions on a Reddit [AMA](https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/) and livestreamed video on [YouTube](https://www.youtube.com/watch?v=i8XjAOMX-VM) 
+* @jy-p and @MustStopMurad met with reporters from BTC Manager, The Information, and Bitcoin Magazine during Blockchain Week NYC.
+* @jy-p quoted about Facebook getting into crypto in: [Crowdfund Insider](https://www.crowdfundinsider.com/2019/05/147078-blockchain-industry-comments-on-expected-facebook-cryptocurrency-facebook-is-the-antithesis-of-what-cryptocurrency-stands-for/), [Live Bitcoin News](https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/), and [The Daily Hodl](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/).
+* @moo31337 [spoke](https://soundcloud.com/matthew-aaron-690749808/horizen-decred-casino-coin-101) with host Matthew Aaron on the Crypto 101 podcast. Starts at 17:32.
+* @MustStopMurad [appeared](https://cheddar.com/media/after-40-million-hack-bitcoin-climbs-to-6-000-for-the-first-time-this-year) on Cheddar TV, where he mentions Decred at 2:07.
+* [Mention](https://btcmanager.com/blockchains-neglect-social-contracts-will-likely-fail/) of Decred in BTCManager from after Blockchain week meeting.
+* The Information quoted @jy-p in a [story](https://www.theinformation.com/articles/can-crypto-crack-the-retail-market) about the launch of Spedn.
+* @MustStopMurad was [quoted](https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/) in Forbes and mentions Decred: "While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero." 
+* Secured a speaking slot for @jy-p about decentralization and Decred's funding mechanism at the Voice of Blockchain, an event that will take place in Chicago this fall.
+* Worked with the community to finalize a byline on Decred's approach to staking.
+* Submitted PR proposal in Politeia for next six months.
 
 ## Events
 
