Finished dev stats (counting # contributors across repos)

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -53,7 +53,7 @@ Other:
 * dcrstakepool (VSP software) received a [redesign](https://github.com/decred/dcrstakepool/pull/339).
 * dcrd successfully [synced](https://twitter.com/marco_peereboom/status/1128763544118362112) on RISC-V QEMU. RISC-V is a hope for a less horrible CPU architecture.
 
-Dev activity stats for May: 88 active PRs, 272 master commits, 52249 added and 56998 deleted lines spread across 15 repositories. Contributions came from {}-{} developers per repository. ([chart]({chart link is optional, drop if not ready})).
+Dev activity stats for May: 88 active PRs, 272 master commits, 52249 added and 56998 deleted lines spread across 15 repositories. Contributions came from 2-7 developers per repository. ([chart]({chart link is optional, drop if not ready})).
 
 ## People
 
