Polish Rel Ext, credits

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -246,37 +246,39 @@ Selected Twitter discussions:
 
 ## Markets
 
-In May DCR was trading between USD 23.6-35 / BTC 0.0032-0.0045. The average daily rate was $27.71.
+In May DCR was trading between USD 23.6-35.0 / BTC 0.0032-0.0045. The average daily rate was $27.71.
 
-Bitcoin rose steadily from ~5500 and even crossed 9000 USD for a brief amount of time.
+Bitcoin rose steadily from USD ~5,500 and even crossed USD 9,000 for a brief amount of time.
 
 ## Relevant External
 
-EOS Block Producers [burned](https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/) 34 million EOS (~$272 million) from the eosio.saving account. These funds had accumulated from the 4% inflation which was to be used to fund project development through a [Worker Proposal System](https://medium.com/eosys/eos-worker-proposal-system-announcement-6addcfb0134c). This idea fell out of favor with the EOS BPs and community, and 15 BPs supported the proposal to burn accumulated savings [on](https://www.eosx.io/tx/26ca16319febafc0942a8c6e3be26c16b84846b7cfe5f6ade906a0b86a6c2bb7?listView=actions) May 8. New tokens are still accumulating in the savings account, but this seems likely to be removed as there is an open [referendum](https://eosauthority.com/polls_details?proposal=inflation_20190307&prev=search) to remove the 4% inflation for development entirely, which has almost unanimous support from around 2.7% of EOS tokens that have voted.
+EOS Block Producers [burned](https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/) 34 million EOS (~$272 million) from the eosio.saving account. These funds had accumulated from the 4% inflation which was to be used to fund project development through a [Worker Proposal System](https://medium.com/eosys/eos-worker-proposal-system-announcement-6addcfb0134c). This idea fell out of favor with the EOS BPs and community, and 15 BPs supported the proposal to burn accumulated savings [on May 8](https://www.eosx.io/tx/26ca16319febafc0942a8c6e3be26c16b84846b7cfe5f6ade906a0b86a6c2bb7?listView=actions). New tokens are still accumulating in the savings account, but this seems likely to be removed as there is an open [referendum](https://eosauthority.com/polls_details?proposal=inflation_20190307&prev=search) to remove the 4% inflation for development entirely, which has almost unanimous support from around 2.7% of EOS tokens that have voted.
 
 Zooko [commented](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) on a long-running discussion about the future of Zcash development to express support for a new dev fund. Zcash currently allocates 20% of the block rewards to a founders reward but this is due to end in 2020. Zooko and many other advocates think the new dev fund needs to be more decentralized than the founder's reward's reliance on the Electronic Coin Company, and are encouraging community members to present and develop plans for decentralized governance of this fund.
 
 Tezos Athens upgrade [activated](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) on May 30, marking the end of a process that began in February to select a proposal, endorse it, test it and activate it. One of the lesser discussed aspects of the protocol upgrade was the [generation](https://twitter.com/wisercharlie/status/1134240285238501376) of 100 new XTZ to be claimed by the upgrade's developers for a round of drinks. This has been described as a method of [funding development](https://medium.com/tocqueville-group/why-tezos-is-the-best-platform-for-tokenized-assets-89a960cfa828) in future, with the developers who make a protocol change proposal incorporating the generation of new XTZ which they can claim as a reward for their work. 
 
-Dash [Ventures](https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee) investment foundation is nearing completion, and Dash will be holding an election to select a set of supervisors to oversee its operation. The Dash Investment Foundation will be able to take ownership of equity or other assets in consideration for network funding. The election to fill the remaining 4 of 6 supervisor seats [started](https://blog.dash.org/details-on-the-election-for-dash-investment-foundation-supervisors-25766c55a1f) on May 30, and will be followed by budgetary proposals to fund the foundation's administrative costs and allocate some capital for it to invest,
+Dash [Ventures](https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee) investment foundation is nearing completion, and Dash will be holding an election to select a set of supervisors to oversee its operation. The Dash Investment Foundation will be able to take ownership of equity or other assets in consideration for network funding. The election to fill the remaining 4 of 6 supervisor seats [started](https://blog.dash.org/details-on-the-election-for-dash-investment-foundation-supervisors-25766c55a1f) on May 30, and will be followed by budgetary proposals to fund the foundation's administrative costs and allocate some capital for it to invest.
 
 The [Open Money Initiative](https://medium.com/@openmoneyinitiative/announcing-the-open-money-initiative-61422b58ad06) was announced, a research nonprofit which will study how money is used in closed economies with collapsing monetary systems. The initiative's first project is an ethnographic study in Venezuela. The initiative is supported by funding from Zcash, Stellar, Tezos and the Cosmos supported Interchain Foundation - among others.
 
 A Bitcoin Cash hard fork on May 15 was beset by [several](https://blog.bitmex.com/the-bitcoin-cash-hardfork-three-interrelated-incidents/) issues and in the ensuing chaos, 3,391 BCH (~$1.35 million) were double spent. A bug with Bitcoin ABC led to invalid transactions filling up the mempool and a series of empty blocks being mined. Some miners began mining blocks on the pre-hardfork chain, causing a chain split. Immediately after the bug was resolved, a 2 block reorg occurred in which funds that the hardfork made spendable by any miners were double spent. It seems likely the dominant BCH miners reorged the chain to remove transactions in which these coins were claimed by another miner - replacing with transactions where they take custody of these "free to claim" coins.
 
-Poloniex has been busy in May, delisting [Peercoin](https://talk.peercoin.net/t/team-update-28-poloniex-delisting-legal-risks-memo-exchange-expansion-plans/9278) and a number of other cryptocurrencies, "[geofencing](https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9)" DCR and 8 other cryptocurrencies so that US-based customers cannot trade it, and [announcing](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) support for Cosmos staking. The decision to geofence DCR on the basis of regulatory uncertainty is perplexing, given the many [reasons](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) why DCR should not be considered a security, and Poloniex's concurrent support for ICO projects that seem to better fit the definition of a security. In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission.  The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.". Another [post](https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/) from Circle further elaborated on their position and complained about the difficulties caused by uncertainty from US regulators.
+Poloniex has been busy in May, delisting [Peercoin](https://talk.peercoin.net/t/team-update-28-poloniex-delisting-legal-risks-memo-exchange-expansion-plans/9278) and a number of other cryptocurrencies, "[geofencing](https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9)" DCR and 8 other cryptocurrencies so that US-based customers cannot trade it, and [announcing](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) support for Cosmos staking. The decision to geofence DCR on the basis of regulatory uncertainty is perplexing, given the many [reasons](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) why DCR should not be considered a security, and Poloniex's concurrent support for ICO projects that seem to better fit the definition of a security. In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission. The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.". Another [post](https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/) from Circle further elaborated on their position and complained about the difficulties caused by uncertainty from US regulators.
 
 Kin Foundation [started](https://twitter.com/ResearchCircle/status/1134541879675166722) a Defend Crypto [initiative](https://www.defendcrypto.org/) by which they collect donations to take SEC to court. On Jun 4 the SEC responded by [opening](https://www.coindesk.com/the-sec-is-suing-kik-for-its-2017-ico) formal proceedings against Kin. 
 
 As part of Bitfinex's engagement with the New York District Attorney, it has [emerged](https://www.coindesk.com/tether-lawyer-confirms-stablecoin-74-percent-backed-by-cash-and-equivalents) that Tether was only 74% backed by USD on Apr 30, according to their legal representative.
 
-Binance suffered a security [breach](https://binance.zendesk.com/hc/en-us/articles/360028031711) which resulted in the loss of 7,000 BTC. The breach was a result of hackers obtaining a large number of user API keys and 2FA codes. On twitter, @JeremyRubin [suggested](https://twitter.com/JeremyRubin/status/1125919526485254144) that if Binance released their private keys for the hacked coins (or a subset) they could coordinate a reorg to undo the theft. CZ was participating in an AMA soon after the breach was announced and mentioned that he was considering this proposition. This sparked uproar on crypto twitter, with much discussion of whether this was a viable or advisable approach. The subject also received some in depth [treatment](https://research.circle.com/weekly-recaps/weekly-crypto-recap-to-reorg-or-not-to-reorg). Ultimately CZ decided [not](https://twitter.com/cz_binance/status/1125996194734399488) to pursue an attempted reorg because it would damage BTC's credibility and potentially split the chain/community. The losses would instead be covered by the Binance safu fund.
+Binance suffered a security [breach](https://binance.zendesk.com/hc/en-us/articles/360028031711) which resulted in the loss of 7,000 BTC. The breach was a result of hackers obtaining a large number of user API keys and 2FA codes. On twitter, @JeremyRubin [suggested](https://twitter.com/JeremyRubin/status/1125919526485254144) that if Binance released their private keys for the hacked coins (or a subset) they could coordinate a reorg to undo the theft. CZ was participating in an AMA soon after the breach was announced and mentioned that he was considering this proposition. This sparked uproar on crypto Twitter, with much discussion of whether this was a viable or advisable approach. The subject also received some in depth [treatment](https://research.circle.com/weekly-recaps/weekly-crypto-recap-to-reorg-or-not-to-reorg). Ultimately CZ decided [not](https://twitter.com/cz_binance/status/1125996194734399488) to pursue an attempted reorg because it would damage BTC's credibility and potentially split the chain/community. The losses would instead be covered by the Binance SAFU fund.
+
+One of the articles that [quoted](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/) Decred on Facebook's coin had an interesting historic reference. Since 2014 MIT ran an experiment on students where Bitcoin was used to test the spreading of new technologies among the masses. A 2017 [article](http://news.mit.edu/2017/bitcoin-study-period-exclusivity-encourages-early-adopters-0713) outlining the study and conclusions noted that the insights could be used by "tech firms" who "could fulfill the early adopter's need to feel exclusive and capitalize on their potential to encourage wider adoption". A professor from another university commented "This paper helps us understand some of the challenges of launching such a currency, even without a technology-savvy population.". In May this year, CoinDesk [reported](https://www.coindesk.com/mit-economist-christian-catalini-said-to-be-working-on-facebooks-crypto-push) that one of the authors of the experiment is helping Facebook to build a cryptocurrency.
 
 Another [sad story](https://medium.com/coinmonks/the-most-expensive-lesson-of-my-life-details-of-sim-port-hack-35de11517124) surfaced of a person's poor security practices leading to a loss of >$100K in crypto. Hint: SMS 2FA is insecure and of course, don't keep that much on an exchange.
 
-Intel [disclosed](https://www.extremetech.com/computing/291474-intel-discloses-new-speculative-execution-security-vulnerabilities) a new set of Speculative execution vulnerabilities.
+Intel [disclosed](https://www.extremetech.com/computing/291474-intel-discloses-new-speculative-execution-security-vulnerabilities) a [new set](https://en.wikipedia.org/wiki/Microarchitectural_Data_Sampling) of speculative execution vulnerabilities. Mitigations for major operating systems were released in response.
 
-Firefox users went through a frustrating experience of software that worked yesterday suddenly stopped working. Most Firefox addons were disabled around May 3 due to an (unexpected?) expiration of code signing certificate, a bug dubbed ['armagadd-on-2.0'](https://bugzilla.mozilla.org/show_bug.cgi?id=1548973). This included addons that protect user privacy and security by blocking tons of unwanted ad and spyware content on the web. Mozilla published a [notice](https://blog.mozilla.org/addons/2019/05/04/update-regarding-add-ons-in-firefox/) that as a part of the solution, a "fix will be automatically applied in the background" delivered via the Studies system while a more general fix is in the works.
+Firefox users went through a frustrating experience of software that worked yesterday suddenly stopped working. Most Firefox addons were disabled around May 3 due to an (unexpected?) expiration of code signing certificate, a bug dubbed ['armagadd-on-2.0'](https://bugzilla.mozilla.org/show_bug.cgi?id=1548973). This included addons that protect user privacy and security by blocking tons of unwanted ad and spyware content on the web. Mozilla published a [notice](https://blog.mozilla.org/addons/2019/05/04/update-regarding-add-ons-in-firefox/) that as a part of the solution, a "fix will be automatically applied in the background" delivered via the Studies system while a more general fix was in the works.
 
 ## About This Issue
 
@@ -286,4 +288,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, degeri, Dustorf, Haon, richardred, s_ben, saender, lukebp.
+Credits (alphabetical order): bee, chappjc, davecgh, degeri, dnldd, Dustorf, Haon, jholdstock, liz\_bagot, lukebp, matheusd, raedah, richardred, s_ben, saender.
