--- a/journal/201905.md
+++ b/journal/201905.md
@@ -150,7 +150,7 @@ Attended:
 
 * May 4-5 - [VII Bitconf](https://www.bitconf.com.br/portal/vii-bitconf/) - São Paulo, Brazil. Decred was well [represented](https://twitter.com/Decred_BR/status/1124763200984158208) at this event with around 1,200 participants.
 * May 7 - [ThatCrypto Meetup](https://www.meetup.com/ThatCrypto/events/261086851/) - Toronto, Canada. @michae2xl and @zubair [presented](https://twitter.com/Decred_CA/status/1126168172472733696) Decred. ([video](https://www.youtube.com/watch?v=Q47CDWYuIHc))
-* May 13 - [Consensus - Change Logs] (https://www.youtube.com/watch?v=h-AfggMHVvE) - New York, USA. jy-p presented a Decred Roadmap update, featuring details on funding and development.
+* May 13 - [Consensus 2019](https://www.coindesk.com/events/consensus-2019) - New York, USA. @jy-p presented a Decred Roadmap update, featuring details on funding and development. ([video](https://www.youtube.com/watch?v=h-AfggMHVvE))
 * May 15 - [Atomic Swap](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) - New York, USA. Decred co-sponsored the Atomic Swap event organized by The Block. @jy-p spoke on a panel about "The Idealist's Dilemma".
 * May 17 - [Global Blockchain Forum](https://twitter.com/wanbihou/status/1129467061220941824) - Hangzhou, China. @Dominic presented Decred.
 * May 18 - Chengdu, China. @Dominic [represented](https://twitter.com/wanbihou/status/1129750422611202048) Decred at an event with a lot of miners present.
@@ -164,9 +164,10 @@ Attended:
 Upcoming:
 
 * Jun 5 - [Decred x Blueyard meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-tickets-61631192556) - Berlin, Germany. @jholdstock will give a presentation and Q&A about Decred. @Haon will also be in attendance.
-* Jun 12 - [Meetup](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA. Join Decred, [The Dartmouth Entrepreneurial Network of DC](https://dendc.wildapricot.org/), and [TechSpace](https://www.techspace.com/coworking-space-near-washington-dc-virginia/) for an evening of conversations and an overview of Decred: A Decentralized Autonomous Entity. Tickets are free but limited, available at [meetup.com](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/). Organized by @akinsawyerr.
+* Jun 12 - [Meetup](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA. Join Decred, [The Dartmouth Entrepreneurial Network of DC](https://dendc.wildapricot.org/), and [TechSpace](https://www.techspace.com/coworking-space-near-washington-dc-virginia/) for an evening of conversations and an overview of Decred: A Decentralized Autonomous Entity. Tickets are free but limited, available [here](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/). Organized by @akinsawyerr.
 * Jun 18 - [TF Blockchain](https://www.tfblock.io/portland) - Portland, USA. @raedah will represent Decred.
 * Jun 19-23 - [Campus Party](https://brasil.campus-party.org/campus-party-brasilia/) - Brasília, Brazil. Decred team [will be](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15596690544084yAyIh:decred.org) presenting 2 lectures on the main stages and around 4 or 5 in our arena. The Brazilian community will be sponsoring a CTF (Capture the Flag) championship with Decred awards. The event runs 24 hours a day. There will be about 60,000 participants and 6,000 camped.
+* Jul 1-2 - [Wharton Roundtable on Cryptogovernance](https://zicklincenter.wharton.upenn.edu/event/wharton-cryptogovernance-workshop/) - San Francisco, USA. The Zicklin Center for Business Ethics Research at the Wharton School of the University of Pennsylvania is launching a new initiative on the governance of blockchain-related projects, platforms, and consortia. Initial meeting will take place at Wharton San Francisco for approximately 25 highly-esteemed experts, representing a wide variety of perspectives and backgrounds. @akinsawyerr will be attending on behalf of Decred.
 
 Events [repository](https://github.com/decredcommunity/events) was re-published under decredcommunity GitHub organization with 10 past [reports](https://github.com/decredcommunity/events/tree/master/reports) polished and extended with links to photos and videos. Event attendees are encouraged to [submit](https://github.com/decredcommunity/events/wiki/Submit-Event-Report) event reports to share experience with other Decred representatives and the wider community about cryptocurrency situation in various locations.
 
