Chop up sentence

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -4,7 +4,7 @@
 
 May's highlights:
 
-* DCP4 activated and now Decred's mainnet is ready for Lightning Network.
+* DCP4 activated. Decred's mainnet is now ready for Lightning Network.
 * iOS wallet's first release candidate entered public testing.
 * The first phase of 3 Treasury funded proposals (Ditto, Research and Bounty) has come to an end, with recaps being published and proposals for further funding already opened for Ditto and the research program. A total of 6 proposals were submitted in May, with 4 open for voting in early June.
 * Decred Assembly and Decred in Depth podcasts completed early production and released the first episodes. The Decred Distributed video features @elian, who later in May went on to cover 3 events in 7 days in Colombia and Uruguay, and provide detailed descriptions his experience at each. 
