--- a/journal/201905.md
+++ b/journal/201905.md
@@ -7,7 +7,7 @@ May's highlights:
 * DCP4 activated. Decred's mainnet is now ready for Lightning Network.
 * iOS wallet's first release candidate entered public testing.
 * The first phase of 3 Treasury funded proposals (Ditto, Research and Bounty) has come to an end, with recaps being published and proposals for further funding already opened for Ditto and the research program. A total of 6 proposals were submitted in May, with 4 open for voting in early June.
-* Decred Assembly and Decred in Depth podcasts completed early production and released the first episodes. The Decred Distributed video features @elian, who later in May went on to cover 3 events in 7 days in Colombia and Uruguay, and provide detailed descriptions his experience at each. 
+* Decred Assembly and Decred in Depth podcasts completed early production and released the first episodes. The Decred Distributed video features @elian, who later in May went on to cover 3 events in 7 days in Colombia and Uruguay, and provide detailed descriptions his experience at each.
 
 ## Development
 
@@ -15,7 +15,7 @@ May's highlights:
 
 Work started to [port](https://github.com/decred/dcrd/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+port) several rearrangements from upstream btcd in order to reduce coupling and split blockmanager and rpcserver into their own packages.
 
-Another active area was [mining code](https://github.com/decred/dcrd/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+mining) that is undergoing a series of code improvements and performance optimizations, e.g. to [remove getblocktemplate](https://github.com/decred/dcrd/pull/1736) and to [require](https://github.com/decred/dcrd/pull/1739) a valid template address. 
+Another active area was [mining code](https://github.com/decred/dcrd/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+mining) that is undergoing a series of code improvements and performance optimizations, e.g. to [remove getblocktemplate](https://github.com/decred/dcrd/pull/1736) and to [require](https://github.com/decred/dcrd/pull/1739) a valid template address.
 
 A major pending change to mining code that deserves a special mention is an [overhaul](https://github.com/decred/dcrd/pull/1748) of the background template generator (the function that miners call to receive templates to create blocks from). Currently, miners not familiar with the intricacies of Decred voting will occasionally produce valid blocks with the minimum 3 PoS votes, out of a possible 5. This is bad for PoW miners, who get a reduced subsidy for including fewer votes. This is also undesirable for PoS voters, who may not receive the PoS reward, despite having voted, simply due to propagation delay. To address this, the background template generator has been updated to add support for intelligent vote propagation, as well as a number of other features, such as better handling of chain reorganization to alternative blocks, a subscription that provides miners a stream of template updates, and consideration of the synchronization state as part of determining if the chain is current. It should be noted that this work only implements the infrastructure and does not yet expose this functionality in production.
 
@@ -68,11 +68,11 @@ Below is the proposal status as of Jun 1.
 
 * [Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) by @richard-red, a proposal to continue funding the research program with $20,000, estimated to keep it going for 6 months. The proposal includes a report on the first 6 months activities, and a description of how the approach going forward will differ. The proposal also invites ideas about research projects in comments.
 
-* [Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) by @jy-p, a proposal to move forward with the DEX by producing a "full RFC-style specification" of the processes involved. The specification would be completed by Company 0 working with @chappjc, @buck54321 and @jholdstock, at a cost of up to $20,000. 
+* [Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) by @jy-p, a proposal to move forward with the DEX by producing a "full RFC-style specification" of the processes involved. The specification would be completed by Company 0 working with @chappjc, @buck54321 and @jholdstock, at a cost of up to $20,000.
 
 * [Incentivizing BD Evangelists within the Decred Ecosystem](https://proposals.decred.org/proposals/cb446a469987d6603d93f442ef0d4e45bacbea47a72b5ce89f9c3cac3868d627) by @betterfuture, a proposal to establish a "Decred Evangelists" business development team that would arrange co-development deals with partner organizations, and be rewarded with a percentage of any DCR contributed by those partners to the Treasury. The proposal was edited by @betterfuture on May 31 to say that it will be abandoned and re-submitted as two separate proposals, based on community feedback.
 
-* [A Journey to the Future of Work- Telling the DCR story through Politeia](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) by @jer979, a proposal to  write an article about Politeia and the author's proposal submission journey. This proposal initially appeared to have good support, but after [comments](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737/comments/29) about @jer979's past relationship with IOTA lost some of that support and was ultimately rejected with 48.6% approval (and voter participation of 44%, the second highest participation rate in Politeia's history).
+* [A Journey to the Future of Work- Telling the DCR story through Politeia](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) by @jer979, a proposal to write an article about Politeia and the author's proposal submission journey. This proposal initially appeared to have good support, but after [comments](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737/comments/29) about @jer979's past relationship with IOTA lost some of that support and was ultimately rejected with 48.6% approval (and voter participation of 44%, the second highest participation rate in Politeia's history).
 
   While the proposal was rejected, @jer979 still [published](https://www.neverstopmarketing.com/a-tale-of-two-daos-and-the-rise-of-contributor-experience/) his journey on his website. In the article, he argued that "Contributor Experience" (CX) is important and compared proposal submission experience of DAOstack and Decred, outlining some friction points. Following an [exchange](https://twitter.com/lukebp_/status/1131195413925638144) on Twitter, @lukebp captured the feedback in a [GitHub issue](https://github.com/decred/politeiagui/issues/1221).
 
@@ -80,7 +80,7 @@ Below is the proposal status as of Jun 1.
 
 * [Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by @moo31337, proposed a method of decentralizing Treasury spending with a monthly on chain vote to approve payments to contractors. It was approved with 97.5% Yes votes.
 
-The first constitution amendment has been [applied](https://docs.decred.org/governance/decred-constitution/) on docs.decred.org. 
+The first constitution amendment has been [applied](https://docs.decred.org/governance/decred-constitution/) on docs.decred.org.
 
 @degeri published a Bounty program [status update](https://bounty.decred.org/) on May 15, reporting that 49 submissions had been processed so far with 7 eligible for a payout.
 
@@ -137,14 +137,14 @@ Ditto's May achievements:
 * Ditto and The Block hosted Atomic Swap, an invite-only event during Blockchain Week NYC attended by 150 crypto influencers, media, investors, and enthusiasts, and sponsored by Decred. The Block published a [story](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) prior to the event.
 * @jy-p spoke on "The Idealist's Dilemma" panel at Atomic Swap, where he debated what it means to be a decentralized protocol alongside Beam, Dash, and Orbs.
 * Reporters from top-tier media such as Bloomberg, The Block, Bitcoin Magazine, Fortune and other outlets attended Atomic Swap. Team Ditto was also able to meet several Decred community members in person there, including @akinsawyerr, @anshawblack, @jholdstock, @lukebp, @jy-p, @jz, @Dustorf.
-* @liz\_bagot and @treydpr from Ditto answered the community's questions on a Reddit [AMA](https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/) and livestreamed video on [YouTube](https://www.youtube.com/watch?v=i8XjAOMX-VM) 
+* @liz\_bagot and @treydpr from Ditto answered the community's questions on a Reddit [AMA](https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/) and livestreamed video on [YouTube](https://www.youtube.com/watch?v=i8XjAOMX-VM).
 * @jy-p and @MustStopMurad met with reporters from BTC Manager, The Information, and Bitcoin Magazine during Blockchain Week NYC.
 * @jy-p quoted about Facebook getting into crypto in: [Crowdfund Insider](https://www.crowdfundinsider.com/2019/05/147078-blockchain-industry-comments-on-expected-facebook-cryptocurrency-facebook-is-the-antithesis-of-what-cryptocurrency-stands-for/), [Live Bitcoin News](https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/), and [The Daily Hodl](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/).
 * @moo31337 [spoke](https://soundcloud.com/matthew-aaron-690749808/horizen-decred-casino-coin-101) with host Matthew Aaron on the Crypto 101 podcast. Starts at 17:32.
 * @MustStopMurad [appeared](https://cheddar.com/media/after-40-million-hack-bitcoin-climbs-to-6-000-for-the-first-time-this-year) on Cheddar TV, where he mentions Decred at 2:07.
 * [Mention](https://btcmanager.com/blockchains-neglect-social-contracts-will-likely-fail/) of Decred in BTCManager from after Blockchain week meeting.
 * The Information quoted @jy-p in a [story](https://www.theinformation.com/articles/can-crypto-crack-the-retail-market) about the launch of Spedn.
-* @MustStopMurad was [quoted](https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/) in Forbes and mentions Decred: "While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero." 
+* @MustStopMurad was [quoted](https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/) in Forbes and mentions Decred: "While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero.".
 * Secured a speaking slot for @jy-p about decentralization and Decred's funding mechanism at the Voice of Blockchain, an event that will take place in Chicago this fall.
 * Worked with the community to finalize a byline on Decred's approach to staking.
 * Submitted PR proposal to Politeia for next six months funding.
@@ -160,11 +160,11 @@ Attended:
 * May 17 - [Global Blockchain Forum](https://twitter.com/wanbihou/status/1129467061220941824) - Hangzhou, China. @Dominic presented Decred.
 * May 18 - Chengdu, China. @Dominic [represented](https://twitter.com/wanbihou/status/1129750422611202048) Decred at an event with a lot of miners present.
 * May 18-19 - [CriptoLatinFest](https://criptolatinfest.com/) - Bogotá, Colombia. @elian presented Decred at this event with around 300 attendees. The event attracted attendees who were more interested in speculation than the fundamentals of the technology. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190518-criptolatinfest-bogota-colombia.md))
-* May 20-21 - [La Conexión](https://www.la-conexion.com/) - Medellín, Colombia. @elian presented Decred at this event with around 200 attendees, an international mixture of  investors, entrepreneurs and cryptocurrency professionals. This event attracted people who were interested in understanding how blockchain technology works and building it into their business. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190520-laconexion-medellin-colombia.md))
-* May 23 - [Decred AMA](https://twitter.com/DecredCN/status/1131487833137397760) - online. This AMA was organized by Cobo Wallet and @Dominic answered questions. The AMA led [300](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15587188721553ZAajQ:decred.org) people to join the [Decred Chinese](https://t.me/decred_cn) Telegram channel. 
+* May 20-21 - [La Conexión](https://www.la-conexion.com/) - Medellín, Colombia. @elian presented Decred at this event with around 200 attendees, an international mixture of investors, entrepreneurs and cryptocurrency professionals. This event attracted people who were interested in understanding how blockchain technology works and building it into their business. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190520-laconexion-medellin-colombia.md))
+* May 23 - [Decred AMA](https://twitter.com/DecredCN/status/1131487833137397760) - online. This AMA was organized by Cobo Wallet and @Dominic answered questions. The AMA led [300](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15587188721553ZAajQ:decred.org) people to join the [Decred Chinese](https://t.me/decred_cn) Telegram channel.
 * May 24 - [Bitcoinday](https://bitcoinday.tv/) - Montevideo, Uruguay. The event had around 200 attendees and @elian represented Decred on a panel on blockchain and business, and also ran a workshop about dcrtime and Politeia attended by around 20 people. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190524-bitcoinday-montevideo-uruguay.md))
 * May 24-25 - [Blockchain Nigeria Group](http://blockchainnigeria.group/) - Lagos, Nigeria. @collins and some other Raedah Group developers represented Decred at the event and delivered a presentation.
-* May 28 - [Gophers Silesia](https://www.meetup.com/GophersSilesia/events/260673565/) - Katowice, Poland. @kozel [delivered](https://twitter.com/Decred_PL/status/1133452876716621824) a talk about Decred which has been recorded, video to come. 
+* May 28 - [Gophers Silesia](https://www.meetup.com/GophersSilesia/events/260673565/) - Katowice, Poland. @kozel [delivered](https://twitter.com/Decred_PL/status/1133452876716621824) a talk about Decred which has been recorded, video to come.
 
 Upcoming:
 
@@ -185,7 +185,7 @@ Selected articles:
 * How I Make a Living in the Crypto Gig Economy by @s\_ben ([medium](https://medium.com/@seth.benton/how-i-make-a-living-in-the-crypto-gig-economy-8674f3693858))
 * The Basics of Blockchain Governance by @Haon ([medium](https://medium.com/@NoahPierau/the-basics-of-blockchain-governance-6669c098344d))
 * Decred as DAE Infrastructure provider by @neil\_nie ([dcrclub](https://blog.dcrclub.org/chapter_05/dcr_DAE.html)), translated to English by @changhugo ([medium](https://medium.com/@changhugo/decred-as-a-dae-infrastructure-provider-970677f38179))
-* Comparing Double Spend Resistance: Decred VS Bitcoin - Part 1 by @Fiach_Dubh ([medium](https://medium.com/coinmonks/comparing-double-spend-resistance-decred-vs-bitcoin-part-1-330c8081b2a9))
+* Comparing Double Spend Resistance: Decred VS Bitcoin - Part 1 by @Fiach\_Dubh ([medium](https://medium.com/coinmonks/comparing-double-spend-resistance-decred-vs-bitcoin-part-1-330c8081b2a9))
 * Bitcoin: an Accounting Revolution by Permabull Nino ([medium](https://medium.com/@permabullnino/bitcoin-an-accounting-revolution-40efcb903d7b)) - not Decred related
 * The community of Decred is present around the world by @Haon ([medium](https://medium.com/decred/the-community-of-decred-is-present-around-the-world-64fcc9113924))
 * Decred Governance: An Iterative Approach by @max\_bronstein ([medium](https://medium.com/@maxbronstein/decred-governnce-an-iterative-approach-2a89b9751f5e))
@@ -205,7 +205,7 @@ Videos:
 Audio:
 
 * Decred: Everything You Ever Wanted to Know - Vexpoint podcast with @Haon ([vexpoint.com](http://www.vexpoint.com/decred-investment/))
-* Crypto 101 podcast with @moo31337, introduction to Decred ([listennotes.com](https://www.listennotes.com/podcasts/crypto-101-with/horizen-decred-casino-coin-101-o_stJI2LaQC/), starts 17:32) 
+* Crypto 101 podcast with @moo31337, introduction to Decred ([listennotes.com](https://www.listennotes.com/podcasts/crypto-101-with/horizen-decred-casino-coin-101-o_stJI2LaQC/), starts 17:32)
 * CryptoBasic 101 Series: Decred - podcast with @richardred ([cryptobasicpodcast.com](https://www.cryptobasicpodcast.com/home/180))
 * Decred in Depth episode 1 DCR 101 with @jz, hosted by @anshawblack ([youtube](https://www.youtube.com/watch?v=rcEJuN7zh2M), [soundcloud](https://soundcloud.com/decredindepth/ep-1-jonathan-zeppettini-jz-dcr-101))
 
@@ -229,7 +229,7 @@ Comm systems news:
 
 * Someone [trolled](https://www.reddit.com/r/decred/comments/bvw3pv/change_the_name_and_bring_back_tacotime_to_lead/) r/decred with some posts about @jy-p's dress sense or something in early June, and [deleted](https://www.removeddit.com/r/decred/comments/bvw3pv/change_the_name_and_bring_back_tacotime_to_lead) their posts after some time. Not feeding trolls with attention is the best known tactic.
 
-Selected Reddit posts: 
+Selected Reddit posts:
 
 * A [resource](https://www.reddit.com/r/decred/comments/bp035s/decred_accepted_here_the_list_of_businesses_where/) tracking businesses that accept DCR in exchange for products or services.
 * A post complaining that the Treasury is being [milked](https://www.reddit.com/r/decred/comments/bsk1l4/the_treasury_is_getting_milked_by_those_useless/) by useless marketing projects, written on the assumption that the "journey to the future of work" proposal would be approved. This post inspired spirited discussion about the merits of that particular proposal and marketing efforts generally.
@@ -238,7 +238,7 @@ Selected Reddit posts:
 * [Discussion](https://www.reddit.com/r/decred/comments/bpgv33/why_is_poloniex_delisting_decred/) about the geofencing of DCR on Poloniex. Many links on the topic are indexed in [this issue](https://github.com/decredcommunity/issues/issues/133).
 * A [post](https://www.reddit.com/r/decred/comments/bth5od/microsoft_building_on_bitcoin_is_actually_amazing/) about why Microsoft building on Bitcoin is good news for Decred too inspired in depth discussion of the merits of blockchain-based identity systems.
 
-Selected Twitter discussions: 
+Selected Twitter discussions:
 
 * @BradyDale live [tweets](https://twitter.com/BradyDale/status/1128670013974622208) @jy-p's presentation at ChangeLog giving an update on Decred's progress over the last year and next steps.
 * @lukebp [tweets](https://twitter.com/lukebp_/status/1132310565093879808) about misalignment of incentives in Bitcoin.
@@ -257,7 +257,7 @@ EOS Block Producers [burned](https://www.reddit.com/r/eos/comments/bm75ih/the_ma
 
 Zooko [commented](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) on a long-running discussion about the future of Zcash development to express support for a new dev fund. Zcash currently allocates 20% of the block rewards to a founders reward but this is due to end in 2020. Zooko and many other advocates think the new dev fund needs to be more decentralized than the founder's reward's reliance on the Electronic Coin Company, and are encouraging community members to present and develop plans for decentralized governance of this fund.
 
-Tezos Athens upgrade [activated](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) on May 30, marking the end of a process that began in February to select a proposal, endorse it, test it and activate it. One of the lesser discussed aspects of the protocol upgrade was the [generation](https://twitter.com/wisercharlie/status/1134240285238501376) of 100 new XTZ to be claimed by the upgrade's developers for a round of drinks. This has been described as a method of [funding development](https://medium.com/tocqueville-group/why-tezos-is-the-best-platform-for-tokenized-assets-89a960cfa828) in future, with the developers who make a protocol change proposal incorporating the generation of new XTZ which they can claim as a reward for their work. 
+Tezos Athens upgrade [activated](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) on May 30, marking the end of a process that began in February to select a proposal, endorse it, test it and activate it. One of the lesser discussed aspects of the protocol upgrade was the [generation](https://twitter.com/wisercharlie/status/1134240285238501376) of 100 new XTZ to be claimed by the upgrade's developers for a round of drinks. This has been described as a method of [funding development](https://medium.com/tocqueville-group/why-tezos-is-the-best-platform-for-tokenized-assets-89a960cfa828) in future, with the developers who make a protocol change proposal incorporating the generation of new XTZ which they can claim as a reward for their work.
 
 Dash [Ventures](https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee) investment foundation is nearing completion, and Dash will be holding an election to select a set of supervisors to oversee its operation. The Dash Investment Foundation will be able to take ownership of equity or other assets in consideration for network funding. The election to fill the remaining 4 of 6 supervisor seats [started](https://blog.dash.org/details-on-the-election-for-dash-investment-foundation-supervisors-25766c55a1f) on May 30, and will be followed by budgetary proposals to fund the foundation's administrative costs and allocate some capital for it to invest.
 
@@ -267,7 +267,7 @@ A Bitcoin Cash hard fork on May 15 was beset by [several](https://blog.bitmex.co
 
 Poloniex has been busy in May, delisting [Peercoin](https://talk.peercoin.net/t/team-update-28-poloniex-delisting-legal-risks-memo-exchange-expansion-plans/9278) and a number of other cryptocurrencies, "[geofencing](https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9)" DCR and 8 other cryptocurrencies so that US-based customers cannot trade it, and [announcing](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) support for Cosmos staking. The decision to geofence DCR on the basis of regulatory uncertainty is perplexing, given the many [reasons](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) why DCR should not be considered a security, and Poloniex's concurrent support for ICO projects that seem to better fit the definition of a security. In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission. The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.". Another [post](https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/) from Circle further elaborated on their position and complained about the difficulties caused by uncertainty from US regulators.
 
-Kin Foundation [started](https://twitter.com/ResearchCircle/status/1134541879675166722) a Defend Crypto [initiative](https://www.defendcrypto.org/) by which they collect donations to take SEC to court. On Jun 4 the SEC responded by [opening](https://www.coindesk.com/the-sec-is-suing-kik-for-its-2017-ico) formal proceedings against Kik. 
+Kin Foundation [started](https://twitter.com/ResearchCircle/status/1134541879675166722) a Defend Crypto [initiative](https://www.defendcrypto.org/) by which they collect donations to take SEC to court. On Jun 4 the SEC responded by [opening](https://www.coindesk.com/the-sec-is-suing-kik-for-its-2017-ico) formal proceedings against Kik.
 
 As part of Bitfinex's engagement with the New York District Attorney, it has [emerged](https://www.coindesk.com/tether-lawyer-confirms-stablecoin-74-percent-backed-by-cash-and-equivalents) that Tether was only 74% backed by USD on Apr 30, according to their legal representative.
 
